--- a/src/base.css
+++ b/src/base.css
@@ -1,3 +1,40 @@
-h1 {
-    color: red;
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.deck {
+    display:flex;
+    width: 80%;
+    height:80%;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-around;
+}
+
+.cards {
+    height: 100px;
+    width: 100px;
+    border: solid;
+    border-radius: 5px;
+    margin: 5px;
+    background-color: slategray;
+}
+
+.banana.show {
+    background-color: yellow;
+}
+
+.orange.show {
+    background-color: orange;
+}
+
+.lemon.show {
+    background-color: limegreen;
+}
+
+.peach.show {
+    background-color:peachpuff;
+}
+
